tests/errors/assign_i32_to_u32.orus
fn main() {
    let x: i32 = -1
    let y: u32 = x
}
